--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -345,7 +345,7 @@
               <div class="row first">
                 <div class="col-sm-4 dealer">
                   <a href="http://www.vpwe.com" target="_blank"><img style="max-width: 80px;" src="/assets/img/logo-vpwe.png" alt="Virginia Public Works Equipment" /></a>
-                  <h4>Virginia Public Works Equipment</h4>
+                  <h4>Infrastructure Solutions Group<br><em class="gray small">formerly Virginia Public Works Equipment</em></h4>
                   <p>
                   <span class="grey">Location:</span> Mechanicsville, VA<br/>
                   <span class="grey">Phone:</span> 804 703 4040<br/>
@@ -561,8 +561,8 @@
                   <a href="http://www.dohenycompanies.com" target="_blank"><img style="max-width: 140px;" src="/assets/img/logo-doheny.png" alt="Jack Doheny Supplies" /></a>
                   <h4>Jack Doheny Supplies</h4>
                   <p>
-                  <span class="grey">Location:</span> Northville, MI<br/>
-                  <span class="grey">Phone:</span> 800-336-4369<br/>
+                  <span class="grey">Location:</span> Whitestown, IN<br/>
+                  <span class="grey">Phone:</span> 317-768-2600<br/>
                   <span class="grey">Website:</span> <a href="http://www.dohenycompanies.com" target="_blank">www.dohenycompanies.com</a>
                   </p>
                   <p>
@@ -671,7 +671,7 @@
                   <a href="http://www.vactruckrental.com" target="_blank"><img style="max-width: 80px;" src="/assets/img/logo-VTR.jpg" alt="Vacuum Truck Sales and Service" /></a>
                   <h4>Vacuum Truck Sales and Service</h4>
                   <p>
-                  <span class="grey">Location:</span> Geismar, LA<br/>
+                  <span class="grey">Location:</span> Gonzales, LA<br/>
                   <span class="grey">Phone:</span> 225 744 2850<br/>
                   <span class="grey">Website:</span> <a href="http://www.vactruckrental.com" target="_blank">www.vactruckrental.com</a>
                   </p>
@@ -729,7 +729,7 @@
                 </div>
                 <div class="col-sm-4 dealer">
                   <a href="http://www.vpwe.com" target="_blank"><img style="max-width: 80px;" src="/assets/img/logo-vpwe.png" alt="Virginia Public Works Equipment" /></a>
-                <h4>Virginia Public Works Equipment</h4>
+                <h4>Infrastructure Solutions Group<br/><em class="gray small">formerly Virginia Public Works Equipment</em></h4>
                 <p>
                 <span class="grey">Location:</span> Mechanicsville, VA<br/>
                 <span class="grey">Phone:</span> 804 703 4040<br/>
@@ -868,7 +868,7 @@
                   <a href="http://www.vactruckrental.com" target="_blank"><img style="max-width: 80px;" src="/assets/img/logo-VTR.jpg" alt="Vacuum Truck Sales and Service" /></a>
                   <h4>Vacuum Truck Sales and Service</h4>
                   <p>
-                  <span class="grey">Location:</span> Geismar, LA<br/>
+                  <span class="grey">Location:</span> Gonzales, LA<br/>
                   <span class="grey">Phone:</span> 225 744 2850<br/>
                   <span class="grey">Website:</span> <a href="http://www.vactruckrental.com" target="_blank">www.vactruckrental.com</a>
                   </p>
@@ -1452,7 +1452,21 @@
               <h2 id="ut">Utah</h2>
               <div class="row first">
                 <div class="col-sm-4 dealer">
-                  <a href="http://www.powerlineindustries.com" target="_blank"><img style="max-width: 140px;" src="/assets/img/logo-power_line.jpg" alt="Powerline Industries" /></a>
+                  <a href="http://www.powerlineindustries.com" target="_blank"><img style="max-width: 90px;" src="/assets/img/logo-Olympus.jpg" alt="Olympus Equipment" /></a>
+                  <h4>Olympus Equipment</h4>
+                  <p>
+                  <span class="grey">Location:</span> West Valley City, UT<br/>
+                  <span class="grey">Phone:</span> 801-699-6860<br/>
+                  <span class="grey">Website:</span> <a href="https://olympusequipment.com/" target="_blank">www.olympusequipment.com</a>
+                  </p>
+                  <p>
+                  <span class="text-info"><i class="fa fa-circle-o"></i> <em>Authorized Classic Dealer</em></span><br /> 
+                  <span class="text-info"><i class="fa fa-circle"></i> <em>Authorized Magnum Dealer</em></span><br /> 
+                  <span class="text-info"><i class="fa fa-arrows-alt"></i> <em>Authorized Hydro-X Dealer</em></span><br />
+                  </p>
+                </div>
+                <div class="col-sm-4 dealer">
+                  <a href="http://www.powerlineindustries.com" target="_blank"><img style="max-width: 160px;" src="/assets/img/logo-power_line.jpg" alt="Powerline Industries" /></a>
                   <h4>Powerline Industries</h4>
                   <p>
                   <span class="grey">Location:</span> Riverton, UT<br/>
@@ -1501,7 +1515,7 @@
               <div class="row first">
                 <div class="col-sm-4 dealer">
                   <a href="http://www.vpwe.com" target="_blank"><img style="max-width: 80px;" src="/assets/img/logo-vpwe.png" alt="Virginia Public Works Equipment" /></a>
-                <h4>Virginia Public Works Equipment</h4>
+                <h4>Infrastructure Solutions Group<br/><em class="gray small">formerly Virginia Public Works Equipment</em></h4>
                 <p>
                 <span class="grey">Location:</span> Mechanicsville, VA<br/>
                 <span class="grey">Phone:</span> 804 703 4040<br/>
@@ -1727,7 +1741,8 @@
                   <p>
                   <span class="grey">Location:</span> Bucheon, Korea<br/>
                   <span class="grey">Phone:</span> +82-032-668-0989<br/>
-                  <span class="grey">Website:</span> <a href="http://www.ridgidkorea.com/" target="_blank">www.ridgidkorea.com</a>
+                  <span class="grey">Website:</span> <a href="http://www.ridgidkorea.com/" target="_blank">www.ridgidkorea.com</a><br/>      
+                  <span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />
                   </p>
                 </div>
               </div>
@@ -1942,6 +1957,7 @@
         <div id="sw-europe" class="panel-collapse collapse" role="tabpanel" aria-labelledby="sw-europe">
           <div class="dealers-by-region">
             <ul class="list-inline">
+              <li><a href="#sw-Czech" class="region">Czech Republic</a></li>
               <li><a href="#sw-Denmark" class="region">Denmark</a></li>
               <li><a href="#sw-Germany" class="region">Germany</a></li>
               <li><a href="#sw-Italy" class="region">Italy</a></li>
@@ -1954,6 +1970,25 @@
             </ul>
           </div>
           <ul class="list-group">
+            <li class="list-group-item">
+              <h2 id="sw-Czech">Czech Republic</h2>
+              <div class="row first">
+                <div class="col-sm-4 dealer">
+                  <a href="http://www.aquateq.se" target="_blank"><img style="max-width: 120px;" src="/assets/img/logo_IBOS_color_RGB.jpg" alt="IBOS a.s." /></a>
+                  <h4>IBOS a.s.</h4>
+                  <p>
+                  <span class="grey">Location:</span> České Budějovice, Czech Republic<br/>
+                  <span class="grey">Phone:</span> 	+420387310227<br/>
+                  <span class="grey">Website:</span> <a href="https://www.ibos.cz/" target="_blank">www.ibos.cz</a>
+                  </p>
+                </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
+            </li>
             <li class="list-group-item">
               <h2 id="sw-Denmark">Denmark</h2>
               <div class="row first">
