misc tool updates - control

--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -405,17 +405,17 @@
                   </p>
                 </div>
                 <div class="col-sm-4 dealer">
-                  <a href="http://www.phsupplyco.com" target="_blank"><img style="max-width: 60px;" src="/assets/img/logo-PHSupply.gif" alt="P & H Supply" /></a>
-                  <h4>P &amp; H Supply</h4>
+                  <a href="http://www.jet-vac.com" target="_blank"><img style="max-width: 110px;" src="/assets/img/logo-jet-vac.jpg" alt="Jet-Vac Sewer Equipment" /></a>
+                  <h4>Jet-Vac Sewer Equipment</h4>
                   <p>
-                  <span class="grey">Location:</span> Warrenton, GA<br/>
-                  <span class="grey">Phone:</span> 800 836 8705<br/>
-                  <span class="grey">Website:</span> <a href="http://www.phsupplyco.com" target="_blank">www.phsupplyco.com</a>
+                  <span class="grey">Location:</span> Sumter, SC<br/>
+                  <span class="grey">Phone:</span> 800 527 4469<br/>
+                  <span class="grey">Website:</span> <a href="http://www.jet-vac.com" target="_blank">www.jet-vac.com</a>
                   </p>
                   <p>
                   <span class="text-info"><i class="fa fa-circle-o"></i> <em>Authorized Classic Dealer</em></span><br /> 
-                  <span class="text-info"><i class="fa fa-circle"></i> <em>Authorized Magnum Dealer</em></span><br />
-                  <span class="text-info"><i class="fa fa-arrows-alt"></i> <em>Authorized Hydro-X Dealer</em></span><br />
+                  <span class="text-info"><i class="fa fa-circle"></i> <em>Authorized Magnum Dealer</em></span><br /> 
+                  <span class="text-info"><i class="fa fa-arrows-alt"></i> <em>Authorized Hydro-X Dealer</em></span><br />  
                   </p>
                 </div>
                 <div class="col-sm-4 dealer">
@@ -433,7 +433,7 @@
               </div>
               <div class="row">
                 <div class="col-sm-4 dealer">
-                  <a href="http://www.usjetting.com" target="_blank"><img style="max-width: 140px; padding-top:5px;" src="/assets/img/logo-us_jetting.jpg" alt="US Jetting" /></a>
+                  <a href="http://www.usjetting.com" target="_blank"><img style="max-width: 140px; padding-top:15px;" src="/assets/img/logo-us_jetting.jpg" alt="US Jetting" /></a>
                   <h4>US Jetting</h4>
                   <p>
                   <span class="grey">Location:</span> Alpharetta, GA<br/>
