Control tool translations

--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -344,12 +344,12 @@
               <h2 id="de">Delaware</h2>
               <div class="row first">
                 <div class="col-sm-4 dealer">
-                  <a href="http://www.vpwe.com" target="_blank"><img style="max-width: 80px;" src="/assets/img/logo-vpwe.png" alt="Virginia Public Works Equipment" /></a>
+                  <a href="http://infrasolutionsgroup.com/" target="_blank"><img style="max-width: 80px;" src="/assets/img/logo-ISG.png" alt="Infrastructure Solutions Group" /></a>
                   <h4>Infrastructure Solutions Group<br><em class="gray small">formerly Virginia Public Works Equipment</em></h4>
                   <p>
                   <span class="grey">Location:</span> Mechanicsville, VA<br/>
                   <span class="grey">Phone:</span> 804 703 4040<br/>
-                  <span class="grey">Website:</span> <a href="http://www.vpwe.com/" target="_blank">www.vpwe.com</a>
+                  <span class="grey">Website:</span> <a href="http://infrasolutionsgroup.com/" target="_blank">www.infrasolutionsgroup.com</a>
                   </p>
                   <p>
                   <span class="text-info"><i class="fa fa-circle-o"></i> <em>Authorized Classic Dealer</em></span><br /> 
@@ -374,6 +374,20 @@
                   <span class="grey">Location:</span> Bradenton, FL<br/>
                   <span class="grey">Phone:</span> 941 739 0707<br/>
                   <span class="grey">Website:</span> <a href="http://www.cloverleaftool.com" target="_blank">www.cloverleaftool.com</a>
+                  </p>
+                  <p>
+                  <span class="text-info"><i class="fa fa-circle-o"></i> <em>Authorized Classic Dealer</em></span><br /> 
+                  <span class="text-info"><i class="fa fa-circle"></i> <em>Authorized Magnum Dealer</em></span><br /> 
+                  <span class="text-info"><i class="fa fa-arrows-alt"></i> <em>Authorized Hydro-X Dealer</em></span><br />
+                  </p>
+                </div>
+                <div class="col-sm-4 dealer">
+                  <a href="https://www.myepg.com/" target="_blank"><img style="max-width: 140px;" src="/assets/img/logo-EPG.png" alt="Environmental Products Group" /></a>
+                  <h4>Environmental Products Group</h4>
+                  <p>
+                  <span class="grey">Location:</span> Apopka and Deerfield Beach, FL<br/>
+                  <span class="grey">Phone:</span> 407 798 0004<br/>
+                  <span class="grey">Website:</span> <a href="https://www.myepg.com/" target="_blank">www.myepg.com</a>
                   </p>
                   <p>
                   <span class="text-info"><i class="fa fa-circle-o"></i> <em>Authorized Classic Dealer</em></span><br /> 
@@ -408,7 +422,7 @@
                   <a href="http://www.jet-vac.com" target="_blank"><img style="max-width: 110px;" src="/assets/img/logo-jet-vac.jpg" alt="Jet-Vac Sewer Equipment" /></a>
                   <h4>Jet-Vac Sewer Equipment</h4>
                   <p>
-                  <span class="grey">Location:</span> Sumter, SC<br/>
+                  <span class="grey">Location:</span> Atlanta, GA<br/>
                   <span class="grey">Phone:</span> 800 527 4469<br/>
                   <span class="grey">Website:</span> <a href="http://www.jet-vac.com" target="_blank">www.jet-vac.com</a>
                   </p>
@@ -728,12 +742,12 @@
                   </p>
                 </div>
                 <div class="col-sm-4 dealer">
-                  <a href="http://www.vpwe.com" target="_blank"><img style="max-width: 80px;" src="/assets/img/logo-vpwe.png" alt="Virginia Public Works Equipment" /></a>
+                  <a href="http://infrasolutionsgroup.com/" target="_blank"><img style="max-width: 80px;" src="/assets/img/logo-ISG.png" alt="Infrastructure Solutions Group" /></a>
                 <h4>Infrastructure Solutions Group<br/><em class="gray small">formerly Virginia Public Works Equipment</em></h4>
                 <p>
                 <span class="grey">Location:</span> Mechanicsville, VA<br/>
                 <span class="grey">Phone:</span> 804 703 4040<br/>
-                <span class="grey">Website:</span> <a href="http://www.vpwe.com/" target="_blank">www.vpwe.com</a>
+                <span class="grey">Website:</span> <a href="http://infrasolutionsgroup.com/" target="_blank">www.infrasolutionsgroup.com</a>
                 </p>
                   <p>
                   <span class="text-info"><i class="fa fa-circle-o"></i> <em>Authorized Classic Dealer</em></span><br /> 
@@ -1514,12 +1528,12 @@
               <h2 id="va">Virginia</h2>
               <div class="row first">
                 <div class="col-sm-4 dealer">
-                  <a href="http://www.vpwe.com" target="_blank"><img style="max-width: 80px;" src="/assets/img/logo-vpwe.png" alt="Virginia Public Works Equipment" /></a>
+                  <a href="http://infrasolutionsgroup.com/" target="_blank"><img style="max-width: 80px;" src="/assets/img/logo-ISG.png" alt="Infrastructure Solutions Group" /></a>
                 <h4>Infrastructure Solutions Group<br/><em class="gray small">formerly Virginia Public Works Equipment</em></h4>
                 <p>
                 <span class="grey">Location:</span> Mechanicsville, VA<br/>
                 <span class="grey">Phone:</span> 804 703 4040<br/>
-                <span class="grey">Website:</span> <a href="http://www.vpwe.com/" target="_blank">www.vpwe.com</a>
+                <span class="grey">Website:</span> <a href="http://infrasolutionsgroup.com/" target="_blank">www.infrasolutionsgroup.com</a>
                 </p>
                   <p>
                   <span class="text-info"><i class="fa fa-circle-o"></i> <em>Authorized Classic Dealer</em></span><br /> 
