--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -379,8 +379,8 @@
                 <div class="col-sm-4 dealer">
                   <h4>Advanced Pressure Systems</h4>
                   <p><span class="grey">Location:</span>  Burlington, Ontario<br/>
-                  <span class="grey">Phone:</span> (877) 290-4277<br/>
-                  <span class="grey">Website:</span> <a href="https://advancedpressuresystems.com/" target="_blank">www.advancedpressuresystems.com</a></p>
+                  <span class="grey">Phone:</span> (844) 932-5278<br/>
+                  <span class="grey">Website:</span> <a href="https://advancedpressuresystems.ca/" target="_blank">www.advancedpressuresystems.com</a></p>
                   <p class="text-info"><em><i class="fa fa-wrench"></i> Authorized Parts &amp; Tools<br/>
                   <i class="fa fa-cogs"></i> Automated Equipment<br />
                   <i class="fa fa-truck"></i> Authorized Rental Center</em>
