--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,6 +25,7 @@
         </div>
         <ul class="list-unstyled link-list">
           <li><a href="/about">Our Story</a><i class="fa fa-angle-right"></i></li>
+          <li><a href="/podcast"><span style="display:inline-block; background:#efefef; color: #444; padding:0 6px; font-weight:bold; transform: skew(-15deg);">NEW!</span> Podcast</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/jobs">Careers</a><i class="fa fa-angle-right"></i></li>
           <li><a href="https://news.stoneagetools.com">News</a><i class="fa fa-angle-right"></i></li>
           <li><a href="/patents">Patents</a><i class="fa fa-angle-right"></i></li>
