2020 catalog updates, part 2

--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -346,11 +346,11 @@
               <h2 id="thailand">Thailand</h2>
               <div class="row">
                 <div class="col-sm-4 dealer">
-                  <h4>Boonyanuch Engineering Co., Ltd</h4>
+                  <h4>Optimax Sotution Co. Ltd</h4>
                   <p>
                   <span class="grey">Location:</span> Rayong<br/>
                   <span class="grey">Phone:</span> (+66) 0 38 687067-72<br/>
-                  <span class="grey">Website:</span> <a href="http://www.boonyanuch.com" target="_blank">www.boonyanuch.com</a>
+                  <span class="grey">Website:</span> <a href="http://www.optimax.co.th" target="_blank">www.optimax.co.th</a>
                   </p>
                 </div>
               </div>
