--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -269,7 +269,10 @@
                   <h4>MAC International</h4>
                   <p>
                   <span class="grey">Location:</span> Karachi, Pakistan<br/>
-                  <span class="grey">Phone:</span> (+92) 213 264 0348
+                  <span class="grey">Phone:</span> +923000873146<br/>
+                  <span class="grey">Phone:</span> +922132640348<br/>
+                  <span class="grey">Phone:</span> +92518480343<br/>
+                    <span class="grey">Website:</span> <a href="https://pk.linkedin.com/in/macinternational" target="_blank">LinkedIn</a> 
                   </p>
                 </div>
               </div>
