misc updates, podcast episode 5

--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -1699,7 +1699,7 @@
             <ul class="list-inline">
               <li><a href="#sw-China" class="region">China</a></li>
               <li><a href="#sw-India" class="region">India</a></li>
-              <li><a href="#sw-Korea" class="region">Korea</a></li>
+              <li><a href="#sw-Korea" class="region">South Korea</a></li>
             </ul>
           </div>
           <ul class="list-group">
@@ -1709,7 +1709,7 @@
               <div class="row first">
                 <div class="col-sm-4">
                   <div class="dealer">
-                  <a href="http://www.fedjetting.com" target="_blank"><img style="max-width: 140px;" src="/assets/img/logo-fedjetting.gif" alt="Nanjing Fedjetting Tech Co. Ltd" /></a>
+                  <a href="http://www.fedjetting.com" target="_blank"><img style="max-width: 160px;" src="/assets/img/logo-fedjetting.gif" alt="Nanjing Fedjetting Tech Co. Ltd" /></a>
                     <h4>Nanjing Fedjetting Tech Co. Ltd</h4>
                     <p>
                     <span class="grey">Location:</span> Nanjing<br/>
@@ -1746,14 +1746,34 @@
               </div>
             </li>
             <li class="list-group-item">
-              <h2 id="sw-Korea">Korea</h2>
+              <h2 id="sw-Korea">South Korea</h2>
               <!-- 1st row -->
               <div class="row first">
+                <div class="col-sm-4 dealer">
+                  <a href="http://www.ridgidkorea.com" target="_blank"><img style="max-width: 220px; padding-top:20px; padding-bottom:15px;" src="/assets/img/logo-clean-top-tech.jpg" alt="Clean Top Tech" /></a>
+                  <h4>Clean Top Tech</h4>
+                  <p>
+                  <span class="grey">Location:</span> Bucheon, Gyeonggi-do Province<br/>
+                  <span class="grey">Phone:</span> +82-1600-6764<br/>
+                  <span class="grey">Website:</span> <a href="https://cleanpump.modoo.at/" target="_blank">cleanpump.modoo.at</a><br/>      
+<!--                  <span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />-->
+                  </p>
+                </div>
+                <div class="col-sm-4 dealer">
+                  <a href="http://www.jdsolutionkorea.co.kr/" target="_blank"><img style="max-width: 200px; padding-bottom:15px;" src="/assets/img/logo-JD-Solution.jpg" alt="JD Solution Ltd." /></a>
+                  <h4>JD Solution Ltd.</h4>
+                  <p>
+                  <span class="grey">Location:</span> Bucheon, Gyeonggi-do Province<br/>
+                  <span class="grey">Phone:</span> +82-1644-2042<br/>
+                  <span class="grey">Website:</span> <a href="http://www.jdsolutionkorea.com" target="_blank">www.jdsolutionkorea.com</a><br/>      
+                  <span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />
+                  </p>
+                </div>
                 <div class="col-sm-4 dealer">
                   <a href="http://www.ridgidkorea.com" target="_blank"><img style="max-width: 140px;" src="/assets/img/logo-ridgid-korea.gif" alt="ST DAEHEUNG Co., LTD." /></a>
                   <h4>ST DAEHEUNG Co., LTD.</h4>
                   <p>
-                  <span class="grey">Location:</span> Bucheon, Korea<br/>
+                  <span class="grey">Location:</span> Bucheon, Gyeonggi-do Province<br/>
                   <span class="grey">Phone:</span> +82-032-668-0989<br/>
                   <span class="grey">Website:</span> <a href="http://www.ridgidkorea.com/" target="_blank">www.ridgidkorea.com</a><br/>      
                   <span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />
