--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -803,17 +803,9 @@
                     <h4>Comuniv S.A. de C.V.</h4>
                     <p>
                     <span class="grey">Location:</span> Tamaulipas<br/>
-                    <span class="grey">Phone:</span> 83 3210 1747
-                    </p>
-                  </div>
-                </div>
-                <div class="col-sm-4">
-                  <div class="dealer">
-                    <h4>WOMA de Mexico, S.A. de C.V.</h4>
-                    <p>
-                    <span class="grey">Location:</span> Naucalpan<br/>
-                    <span class="grey">Phone:</span> (+52) 55 5300 2326<br/>
-                    <span class="grey">Website:</span> <a href="http://www.woma.mx" target="_blank">www.woma.mx</a>
+                    <span class="grey">Phone:</span> (+52) 83 3210 1747<br/>
+<!--                    <span class="grey">Website:</span> <a href="http://www.comuniv.com.mx" target="_blank">www.comuniv.com.mx</a><br/>-->
+                    <span class="grey">Email:</span> <a href="mailto:contacto@comuniv.com.mx">contacto@comuniv.com.mx</a>
                     </p>
                   </div>
                 </div>
