Testing new Git clone

--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -177,6 +177,7 @@
               <li><a href="#pakistan" class="region">Pakistan</a></li>
               <li><a href="#singapore" class="region">Singapore</a></li>
               <li><a href="#skorea" class="region">South Korea</a></li>
+              <li><a href="#srilanka" class="region">Sri Lanka</a></li>
               <li><a href="#taiwan" class="region">Taiwan</a></li>
               <li><a href="#thailand" class="region">Thailand</a></li>
             </ul>
@@ -312,12 +313,40 @@
               <h2 id="skorea">South Korea</h2>
               <div class="row first">
                 <div class="col-sm-4 dealer">
+                  <h4>Kiwon enTec Co.,Ltd</h4>
+                  <p>
+                  <span class="grey">Location:</span> Gimpo-si, Gyeonggi-do<br/>
+                  <span class="grey">Phone:</span> +82 31 984 9571<br/>
+                  <span class="grey">Website:</span> <a href="http://www.kiwonentec.com/" target="_blank">www.kiwonentec.com</a>
+                  </p>
+                </div>
+                <div class="col-sm-4 dealer">
                   <h4>JN Korea (J-Yen Co., Ltd.)</h4>
                   <p>
                   <span class="grey">Location:</span> Sunchon, Junnam<br/>
-                  <span class="grey">Phone:</span> (+82) 61 723 4771<br/>
+                  <span class="grey">Phone:</span> +82 61 723 4771<br/>
                   <span class="grey">Website:</span> <a href="http://www.jnkorea.co.kr/" target="_blank">www.jnkorea.co.kr</a>
                   </p>
+                </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <h2 id="srilanka">Sri Lanka</h2>
+              <div class="row first">
+                <div class="col-sm-4">
+                  <div class="dealer">
+                    <h4>Manaco Marine (Pvt) Ltd.</h4>
+                    <p>
+                    <span class="grey">Location:</span> Colombo<br/>
+                    <span class="grey">Phone:</span> +94 11 2592055, +94 11 2592056<br/>
+                    <span class="grey">Website:</span> <a href="http://www.http://www.manaco.lk/" target="_blank">www.manaco.lk</a>
+                    </p>
+                  </div>
                 </div>
               </div>
               <div class="row text-right">
@@ -334,7 +363,7 @@
                     <h4>Jian-He International Co., Ltd</h4>
                     <p>
                     <span class="grey">Location:</span> Taipei<br/>
-                    <span class="grey">Phone:</span> (+886) 2 27212511
+                    <span class="grey">Phone:</span> (+886) 2 25178469
                     </p>
                   </div>
                 </div>
@@ -383,7 +412,7 @@
                   <h4>Advanced Pressure Systems</h4>
                   <p><span class="grey">Location:</span>  Burlington, Ontario<br/>
                   <span class="grey">Phone:</span> (844) 932-5278<br/>
-                  <span class="grey">Website:</span> <a href="https://advancedpressuresystems.ca/" target="_blank">www.advancedpressuresystems.com</a></p>
+                  <span class="grey">Website:</span> <a href="https://advancedpressuresystems.ca/" target="_blank">www.advancedpressuresystems.ca</a></p>
                   <p class="text-info"><em><i class="fa fa-wrench"></i> Authorized Parts &amp; Tools<br/>
                   <i class="fa fa-cogs"></i> Automated Equipment<br />
                   <i class="fa fa-truck"></i> Authorized Rental Center</em>
