New Git clone file merge -START

--- a/_includes/downhole-dealers.html
+++ b/_includes/downhole-dealers.html
@@ -1,6 +1,7 @@
 <!-- Downhole Tab Content -->
 <div role="tabpanel" class="tab-pane" id="downhole-tab">
   <div class="row margin-bottom-120">
+    <p>Select your region below to view a list of <span class="bold" style="text-transform:uppercase">downhole tools dealers</span>.</p>
 <!--
     <table class="table table-responsive">
       <tr>
