--- a/_includes/sewer-dealers.html
+++ b/_includes/sewer-dealers.html
@@ -1700,6 +1700,7 @@
               <li><a href="#sw-China" class="region">China</a></li>
               <li><a href="#sw-India" class="region">India</a></li>
               <li><a href="#sw-Korea" class="region">South Korea</a></li>
+              <li><a href="#sw-srilanka" class="region">Sri Lanka</a></li>
             </ul>
           </div>
           <ul class="list-group">
@@ -1778,6 +1779,27 @@
                   <span class="grey">Website:</span> <a href="http://www.ridgidkorea.com/" target="_blank">www.ridgidkorea.com</a><br/>      
                   <span class="text-info"><i class="fa fa-wrench"></i> <em>Authorized Repair Center</em></span><br />
                   </p>
+                </div>
+              </div>
+              <div class="row text-right">
+                <a href="#top" title="To Top">
+                  <i class="fa fa-caret-up"></i><small class="thin"> Top</small>
+                </a>
+              </div>
+            </li>
+            <li class="list-group-item">
+              <h2 id="sw-srilanka">Sri Lanka</h2>
+              <div class="row first">
+                <div class="col-sm-4">
+                  <div class="dealer">
+                  <a href="http://www.manaco.lk/" target="_blank"><img style="max-width: 60px;" src="/assets/img/logo-manaco.jpeg" alt="Manaco Marine (Pvt) Ltd." /></a>
+                    <h4>Manaco Marine (Pvt) Ltd.</h4>
+                    <p>
+                    <span class="grey">Location:</span> Colombo<br/>
+                    <span class="grey">Phone:</span> +94 11 2592055, +94 11 2592056<br/>
+                    <span class="grey">Website:</span> <a href="http://www.manaco.lk/" target="_blank">www.manaco.lk</a>
+                    </p>
+                  </div>
                 </div>
               </div>
               <div class="row text-right">
