--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,24 @@
     gtag('config', 'UA-19225233-1');
   </script>
   
+  <!-- Start Pardot campaign tracking Code - Whitney, 04/2020 -->
+  <script type="text/javascript">
+    piAId = '645393';
+    piCId = '33387';
+    piHostname = 'pi.pardot.com';
+
+    (function() {
+    function async_load(){
+    var s = document.createElement('script'); s.type = 'text/javascript';
+    s.src = ('https:' == document.location.protocol ? 'https://pi' : 'http://cdn') + '.pardot.com/pd.js';
+    var c = document.getElementsByTagName('script')[0]; c.parentNode.insertBefore(s, c);
+    }
+    if(window.attachEvent) { window.attachEvent('onload', async_load); }
+    else { window.addEventListener('load', async_load, false); }
+    })();
+  </script>
+  <!-- End Pardot campaign tracking Code -->
+  
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
