--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -41,10 +41,10 @@
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/waterblast-tools-automated-equipment">Waterblast Tools &amp;<br/>Equipment</a></li>
-          <li><a href="/sewer-tools">Sewer Jetting &amp;<br/>Hydro-X Nozzles</a></li>
+          <li><a href="http://www.warthog-nozzles.com" target="_blank">Sewer Jetting <br/> Nozzles</a></li>
           <li><a href="/downhole-tools">Downhole<br/>Tools</a></li>
           <li><a href="/solutions">StoneAge<br/>Solutions</a></li>
-          <li><a href="/training">StoneAge<br/>Training</a></li>
+          <li><a href="http://www.stoneagetraining.com/">StoneAge<br/>Training</a></li>
         </ul>
       </div>
     </div>
