--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -119,6 +119,9 @@ p {
 .margin-top-60 {
   margin-top: 60px;
 }
+.margin-bottom-60 {
+  margin-bottom: 60px;
+}
 .margin-bottom-30 {
   margin-bottom: 30px;
 }
@@ -956,6 +959,54 @@ a.list-group-item:hover {
   font-size:130%;
   line-height: 150%;
 }
+.lp-propositioner .hero-img {
+  position: relative;
+  min-height: 500px;
+  background-image: url(/assets/img/lp-propositioner/header_propositioner_04.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.lp-propositioner .stakes-img {
+  position: relative;
+  min-height: 500px;
+  background-image: url(/assets/img/lp-propositioner/header_propositioner_05.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.lp-propositioner .hero-txt {
+  position: absolute;
+  bottom: 10%;
+  left: 15%;
+}
+.lp-propositioner .btn, .lp-demo .btn {
+  background-color:#d34b40 !important;
+}
+.lp-propositioner .hero-txt>h3 {
+  font-size: 250%;
+  font-weight: 800;
+  color: #fff;
+  text-shadow: 0 1px 2px rgba(0,0,0,.6);
+} 
+.lp-propositioner .hero-txt>p {
+  font-size: 190%;
+  font-weight: 400;
+  line-height: 150%;
+  color: #fff;
+  text-shadow: 0 1px 2px rgba(0,0,0,.6);
+}
+.lp-propositioner .benefits {
+  background-color: rgba(0,0,0,0.65);
+  color: #fff;
+}
+.lp-propositioner .benefits>h2 {
+  padding: 20px;
+}
+.lp-propositioner .benefits.mid {
+  border-left:3px solid #f2f2f2;
+  border-right:3px solid #f2f2f2;
+}
 
 /* Product Pages */
 .product-heading {
@@ -1465,6 +1516,9 @@ ul.job-listings>li {
   font-size:300%;
   color: #cb3a3a;
 }
+.rental-questions {
+  padding-bottom: 120px;
+}
 .rental-questions .panel {
   -webkit-box-shadow: none;
   box-shadow: none;
@@ -1487,11 +1541,14 @@ ul.job-listings>li {
   display: block;
   width: 100%;
   height: 100%;
-  padding-bottom: 10px;
+  padding: 10px 10px 15px;
 }
 .rental-questions .panel-group .panel-heading+.panel-collapse>.panel-body {
   border-top: none;
   border-bottom: 1px solid #efefef;
+}
+.rental-questions .panel-body {
+  padding: 15px 25px;
 }
 .manuals .nav-tabs {
   border-bottom: 0;
@@ -1677,6 +1734,11 @@ li.whr-item>h3>a:before {
 .podcast-listing {
   padding: 15px 0;
 }
+
+/**** Sentinel LP ***/
+  .sentinel-hero {
+    min-height:900px;
+  }
 
 /**** style guide ****/
 .style-grid {
