--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -126,6 +126,16 @@
         $('#sewer-tab').addClass('active');
       };
     </script>
+
+  <!-- Open WB Dealers tab on URL -->
+    <script type="text/javascript">
+      if (window.location.href == 'https://www.stoneagetools.com/contact#waterblast-dealers') {
+        $('.sales-tab').removeClass('active');
+        $('#sales-tab').removeClass('active');
+        $('.wb-tab').addClass('active');
+        $('#wb-tab').addClass('active');
+      };
+    </script>
   
   <!-- Start of Async HubSpot Analytics Code -->
   <script type="text/javascript">
