Fix news.stoneagetools.com redirercting to home page in .htaccess; finalize first round of OG tags; new Algeria dealer

--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -143,6 +143,21 @@
         <div id="wb-africa" class="panel-collapse collapse" role="tabpanel" aria-labelledby="wb-africa">
           <ul class="list-group">
             <li class="list-group-item">
+              <h2>Algeria</h2>   
+              <div class="row first">
+                <div class="col-sm-4">
+                  <div class="dealer">
+                    <h4>Florex Equipments</h4>
+                    <p>
+                    <span class="grey">Location:</span> Algiers, Algeria<br/>
+                    <span class="grey">Phone:</span> +213 (0) 23 26 43 00/03<br/>
+                    <span class="grey">Website:</span> <a href="https://www.florex-dz.com/" target="_blank">www.florex-dz.com</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="list-group-item">
               <h2>South Africa</h2>
               <div class="row first">
                 <div class="col-sm-4">
