--- a/_includes/waterblast-dealers.html
+++ b/_includes/waterblast-dealers.html
@@ -158,6 +158,21 @@
               </div>
             </li>
             <li class="list-group-item">
+              <h2>Nigeria</h2>   
+              <div class="row first">
+                <div class="col-sm-6">
+                  <div class="dealer">
+                    <h4>Waterjet IRM Services Ltd</h4>
+                    <p>
+                    <span class="grey">Location:</span> Port Harcourt, Rivers State, Nigeria<br/>
+                    <span class="grey">Phone:</span> +2348094421277, +2348091068833<br/>
+                    <span class="grey">Website:</span> <a href="https://www.waterjetirm.com/" target="_blank">www.waterjetirm.com</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="list-group-item">
               <h2>South Africa</h2>
               <div class="row first">
                 <div class="col-sm-4">
@@ -420,6 +435,21 @@
         </div>
         <div id="wb-canada" class="panel-collapse collapse" role="tabpanel" aria-labelledby="wb-canada">
           <ul class="list-group">
+            <li class="list-group-item">
+              <h2>Alberta</h2>
+              <div class="row first">
+                <div class="col-sm-4 dealer">
+                  <h4>Riverstone Pressure Systems</h4>
+                  <p><span class="grey">Location:</span>  Leduc, Alberta<br/>
+                  <span class="grey">Phone:</span> +1 (780) 612-1315<br/>
+                  <span class="grey">Website:</span> <a href="https://riverstonewaterjets.com/" target="_blank">www.riverstonewaterjets.com</a></p>
+                  <p class="text-info"><em><i class="fa fa-wrench"></i> Authorized Parts &amp; Tools<br/>
+                  <i class="fa fa-cogs"></i> Automated Equipment<br />
+                  <i class="fa fa-truck"></i> Authorized Rental Center</em>
+                  </p>
+                </div>
+              </div>
+            </li>
             <li class="list-group-item">
               <h2>Ontario</h2>
               <div class="row first">
